fix: Fix overflow on code blocks.

--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -19,6 +19,7 @@
 .code-example pre {
   background-color: #F1EDE4;
   font-weight: 100;
+  overflow: auto;
 }
 
 
